# upgraded-octo-discocito-8

./: .gitignore  Emotion_Face.ipynb  Emotion_Face_Better.ipynb  README.md  adjs.txt  assurance.txt  bad_joke.py  compliment.txt  despacito.py  emotion.py  gen_assurance.py  gen_compliment.ipynb  gen_compliment.py  import_ised.ipynb  joke_generator.ipynb  jokes.txt  lm_adj.pkl  lm_comps.pkl  lm_jokes.pkl  lm_noun.pkl  lm_verb.pkl  med.json  meditate.py  meditate2.py  meme_generator.ipynb  names.txt  nouns.txt  random_joke.py  random_meme.py  sad_chatbot.py  sentences.txt  sents.pkl  stats.pkl  take_pic.py  verbs.txt  voice_emotion.py  voice_emotion_prod.ipynb
.old/: dlib.py  isolation.txt
.old/cython/: setup.py  test.pyx
.old/ptyhon-c-api/: CMakeLists.txt  chipmodule.cpp  chips.cp36-win_amd64.pyd  setup.py
poemGen/: happyStory.py  poem generation ngram.ipynb  poem_gen.py  sadStory.py
poemGen/data/: test_twitter_data.npz  test_twitter_label.npz  train_twitter_data.npz  train_twitter_label.npz
poemGen/data/happypoems/: TheultimateHitchhikersGuide.txt  goodomens.txt
poemGen/data/regularpoems/: gatsby.txt  hobbit.txt  zooey.txt
poemGen/data/sadpoems/: Edgar Allan Poe - Complete Tales  Poems.txt  faultinourstars.txt
presentation/: temp.ipynb
sentiment_analysis/: preprocess.py  sentiment.py  sentiment_training.ipynb
sentiment_analysis/data/happypoems/: odyssey.txt  sheldon_allan_silverstein_2004_9.txt
sentiment_analysis/data/sadpoems/: Edgar Allan Poe - Complete Tales  Poems.txt
